packages/beynac/src/test-utils/source/__fixtures__/errors/bad-barrel-file-import/index.ts
// Bad: imports from parent directory
export { ParentExport } from "../parent-export";
